Fikk et problem med HttpHandler, fikset nå. Laget testklasser